--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+/* .app-header {
+  font-size: 30px;
+  border-bottom:1px solid crimson;
+  padding: 0.4rem;
+}
+
+.app-footer {
   text-align: center;
+  background-color: #cc6576;
+  font-size: 13px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 1.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero {
+  height: 100vh;
+  background : url('./Asset/tamako.jpg') no-repeat bottom center;
+  background-size: cover;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  padding: 0 10vw;
+  color: #ffffff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.hero h1 {
+  position: relative;
+  font-size: 4rem;
+  /* text-transform: uppercase; */
+  /* text-align: center;
+  background-color: rgba(0, 0, 0 ,0.6);
+  padding: 2rem;
+} */ 
