--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,6 +1,6 @@
   .hero {
     height: 100vh;
-    background : url('../Asset/kyoto.jpg') no-repeat bottom center;
+    background : url('../asset/kyoto.jpg') no-repeat bottom center;
     background-size: cover;
     display: flex;
     justify-content: center;
